<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolBar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/primaryColor"
            app:navigationIcon="@drawable/ic_back">

            <TextView
                android:id="@+id/appbar_title_EditTask"
                style="@style/toolBarTitleStyle" />
        </com.google.android.material.appbar.MaterialToolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <ImageView
        android:id="@+id/img_bar"
        android:layout_width="match_parent"
        android:layout_height="99dp"
        android:src="@color/primaryColor"
        app:layout_constraintTop_toBottomOf="@id/appBar" />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="18dp"
        android:backgroundTint="@color/secondaryColor"
        app:cardCornerRadius="18dp"
        app:layout_constraintHeight_percent="0.8"
        app:layout_constraintTop_toBottomOf="@id/appBar">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="18dp">

                <TextView
                    android:id="@+id/tv"
                    style="@style/txtTitle"
                    android:layout_width="match_parent"
                    android:text="@string/edit_task"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="18dp"
                    android:hint="@string/enter_your_task_title"
                    android:inputType="text"
                    android:padding="18dp"
                    app:layout_constraintTop_toBottomOf="@id/tv" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="18dp"
                    app:layout_constraintTop_toBottomOf="@id/et_title">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_desc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/description"
                        android:lines="2"
                        android:maxLines="5"
                        android:padding="18dp"

                        />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/tv_date"
                    style="@style/txtTitle"
                    android:layout_width="match_parent"
                    android:text="@string/select_date"
                    app:layout_constraintTop_toBottomOf="@id/layout_desc" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_date"
                    style="@style/btnSelectStyle"
                    android:layout_width="match_parent"
                    android:text="@string/select_date"
                    app:layout_constraintTop_toBottomOf="@id/tv_date" />

                <TextView
                    android:id="@+id/tv_time"
                    style="@style/txtTitle"
                    android:layout_width="match_parent"
                    android:text="@string/select_time"
                    app:layout_constraintTop_toBottomOf="@id/btn_date" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_time"
                    style="@style/btnSelectStyle"
                    android:layout_width="match_parent"
                    android:text="@string/select_time"
                    app:layout_constraintTop_toBottomOf="@id/tv_time" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_save"
                    android:layout_width="match_parent"
                    android:layout_height="64dp"
                    android:layout_marginTop="64dp"
                    android:backgroundTint="@color/primaryColor"
                    android:text="@string/save_changes"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    app:cornerRadius="18dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/btn_time" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>